fix: use tracked preview clips for videos

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 .DS_Store
+
+# Large source videos stay untracked
 *.mp4
 *.webm
-Media/previews/
 Media/Boise Capitol/Videos/
 Media/Table-Rock/*.mp4
 Media/Table-Rock/*.webm
 Media/the-village/village-video.mp4
+
+# Allow lightweight previews to be tracked
+!Media/previews/*.mp4
 
 # Keep images and thumbnails tracked
 !*.jpg
